# ChangeLog for games-fps/postal2mp-demo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/postal2mp-demo/ChangeLog,v 1.12 2008/02/29 19:18:21 carlo Exp $

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> postal2mp-demo-1407.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  25 Dec 2007; <solar@gentoo.org> postal2mp-demo-1407.ebuild:
  - binary packages that are linked with libc.so.6 need to use sys-libs/glibc
  in RDEPEND

  31 Jul 2007; Doug Goldstein <cardoe@gentoo.org>
  postal2mp-demo-1407.ebuild:
  nvidia-legacy-drivers has merged with nvidia-drivers

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  postal2mp-demo-1407.ebuild:
  Removing old virtual/x11 dependency.

  05 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  postal2mp-demo-1407.ebuild:
  Removed references to nvidia-glx, since it is no longer in the tree.

  17 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  postal2mp-demo-1407.ebuild:
  Cleanup ebuild #140046 by Tristan Heaven.

  07 Jul 2006; Kristopher Kersey <augustus@gentoo.org>
  postal2mp-demo-1407.ebuild:
  Added RDEPEND for new x11-drivers/nvidia-drivers or
  x11-drivers/nvidia-legacy-drivers.

  06 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  postal2mp-demo-1407.ebuild:
  Added >=app-emulation/emul-linux-x86-xlibs-7.0 to the list of valid 32-bit
  opengl providers for amd64 per bug #135643.

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  postal2mp-demo-1407.ebuild:
  Changed to use GAMES_CHECK_LICENSE and removed redundant pkg_setup. Also
  cleaned up after epkgmove.

*postal2mp-demo-1407 (13 Apr 2006)

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> +metadata.xml,
  +postal2mp-demo-1407.ebuild:
  Moved from games-fps/postal2mpdemo to games-fps/postal2mp-demo.

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>